--- a/themes/hexo-theme-3-hexo-master/_config.yml
+++ b/themes/hexo-theme-3-hexo-master/_config.yml
@@ -12,29 +12,29 @@ link:
   theme: color # 链接样式，color: 彩色图标  white: 黑白图标
   items:
     rss: /atom.xml
-    github: https://github.com/yelog
-    facebook: https://www.facebook.com/faker.tops
+    github: https://github.com/tianyideng
+    facebook: https://www.facebook.com/tiffany.deng.716
     twitter:
-    linkedin:
-    instagram: https://www.facebook.com/faker.tops
-    reddit: https://www.reddit.com/user/yelog/
-    weibo: http://weibo.com/u/2307534817
-    jianshu: https://www.jianshu.com/u/ff56736de7cf
-    zhihu: https://www.zhihu.com/people/jaytp/activities
+    linkedin: https://www.linkedin.com/in/tianyideng1/
+    instagram: https://www.instagram.com/dtytytyty/?hl=en
+    reddit: 
+    weibo: https://weibo.com/u/2057260700
+    jianshu: 
+    zhihu: 
     csdn:
-    oschina: https://my.oschina.net/yelog
+    oschina: 
     juejin:
-    email: jaytp@qq.com
-    qq: 872336115
+    email: tiffany.deng15@gmail.com
+    qq: 
     kugou: https://www.kugou.com/
-    neteasemusic: https://music.163.com/#/user/home?id=88151013
+    neteasemusic: 
 
 ##########多作者模式############
 author:
   on: false
   authors:
-    author1: 阿杰
-    author2: 小马哥
+    author1: 邓邓
+    author2: 大坤子
 ##############################
 
 # 文章分类设置
@@ -58,7 +58,7 @@ menu:
     url: /about  # 跳转链接
     type: 1 # 跳转类型 1：站内异步跳转 2：当前页面跳转 3：打开新的tab页
   friend: # '友链' 按钮
-    on: true # 是否展示
+    on: false # 是否展示
   menus: # 添加的其他菜单写在 menus 下，如下三个菜单：动态菜单1、动态菜单2、动态菜单3
     相册:
       on: false
@@ -69,14 +69,14 @@ menu:
       url: http://yelog.org/
       type: 2  # 跳转类型 2：当前页面跳转
     github:
-      on: false
+      on: true
       url: https://github.com/yelog
       type: 3  # 跳转类型 3：打开新的tab页
 
 # 文末声明
-article_txt: 转载请注明来源，欢迎对文章中的引用来源进行考证，欢迎指出任何有错误或不够清晰的表达。可以在下面评论区评论，也可以邮件至 jaytp@qq.com
+article_txt: 转载请注明来源，欢迎对文章中的引用来源进行考证，欢迎指出任何有错误或不够清晰的表达。可以在下面评论区评论，也可以邮件至 tiffany.deng15@gmail.com
 
-bottom_text: ©2016-2019 Yelog
+bottom_text: ©2019-2020 Tiffany Deng
 # 自定义页面最下方的站点版权信息
 # 如果不填，则自定义为 ©2017 author (这个author为hexo根目录_config.yml中配置的)
 
@@ -96,7 +96,7 @@ searchAll: false
 copyright: true
 # Copyright info. of post | 文末版权信息
 
-word_count: false
+word_count: true
 # true 开启字数统计
 # 开启此功能需要安装插件 ：在 hexo根目录 执行npm i hexo-wordcount --save
 
@@ -230,7 +230,7 @@ gentie:
   # 网易云跟帖暂时不支持查询评论数，所以启用时，把评论数关掉，上方comment_count: false。
 
 gitalk:
-  githubID: yelog
+  githubID: Tiffany Deng
   repo: yelog.github.io
   ClientID:
   ClientSecret:
